기본 클래스 작업 진행중.

--- a/src/TKRenderer/TKRenderer.vcxproj
+++ b/src/TKRenderer/TKRenderer.vcxproj
@@ -88,9 +88,12 @@
     <ClCompile Include="TKCommon.cpp" />
     <ClCompile Include="TKObject.cpp" />
     <ClCompile Include="TKObject\TKBaseObject.cpp" />
+    <ClCompile Include="TKObject\TKCamera.cpp" />
     <ClCompile Include="TKObject\TKD3D.cpp" />
     <ClCompile Include="TKObject\TKEngine.cpp" />
     <ClCompile Include="TKObject\TKEngine2.cpp" />
+    <ClCompile Include="TKObject\TKEngineObject.cpp" />
+    <ClCompile Include="TKObject\TKEngineResource.cpp" />
     <ClCompile Include="TKObject\TKIMEInput.cpp" />
     <ClCompile Include="TKObject\TKInput.cpp" />
     <ClCompile Include="TKObject\TKTexture.cpp" />
@@ -103,11 +106,15 @@
     <ClInclude Include="TKInterface.h" />
     <ClInclude Include="TKObject.h" />
     <ClInclude Include="TKObject\TKBaseObject.h" />
+    <ClInclude Include="TKObject\TKCamera.h" />
+    <ClInclude Include="TKObject\TKCamera.hpp" />
     <ClInclude Include="TKObject\TKD3D.h" />
     <ClInclude Include="TKObject\TKEngine.h" />
     <ClInclude Include="TKObject\TKEngine.hpp" />
     <ClInclude Include="TKObject\TKEngine2.h" />
     <ClInclude Include="TKObject\TKEngine2.hpp" />
+    <ClInclude Include="TKObject\TKEngineObject.h" />
+    <ClInclude Include="TKObject\TKEngineResource.h" />
     <ClInclude Include="TKObject\TKIMEInput.h" />
     <ClInclude Include="TKObject\TKInput.h" />
     <ClInclude Include="TKObject\TKTexture.h" />
